# commandui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: launch.json
.claude/context/: brand-rules.md  current-priorities.md  product-brief.md  repo-map.md
.claude/packets/: 2026-03-24-not-provided.md  2026-03-24-not-provided.verdict.md  CMDUI-001-raw-play-integrity-guard.md  CMDUI-001-raw-play-integrity-guard.verdict.md
.claude/workflows/: harden-raw-play.md
.github/workflows/: ci.yml  release-desktop.yml
apps/console/: Cargo.toml  README.md
apps/console/src/: app.rs  event_sink.rs  input.rs  main.rs  model.rs  planner.rs  ui.rs
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  ollama.rs  state.rs
apps/desktop/src-tauri/src/commands/: history.rs  memory.rs  mod.rs  planner.rs  session.rs  settings.rs  terminal.rs  workflow.rs
apps/desktop/src-tauri/src/db/: schema.rs  sqlite.rs
apps/desktop/src-tauri/src/events/: mod.rs  tauri_sink.rs
apps/desktop/src-tauri/src/shell/: mod.rs  pty_manager.rs  session_registry.rs
apps/desktop/src-tauri/src/types/: errors.rs
crates/runtime-core/: Cargo.toml
crates/runtime-persistence/: Cargo.toml
crates/runtime-planner/: Cargo.toml
docs/: dogfood-log.md
docs/handbook/: SUMMARY.md
site/: astro.config.mjs  package-lock.json  package.json
(+125 files in other folders)
