[package]
name = "commandui-console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "commandui-console"
path = "src/main.rs"

[dependencies]
commandui-runtime-core = { path = "../../crates/runtime-core" }
commandui-runtime-planner = { path = "../../crates/runtime-planner" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
