[package]
name = "commandui-desktop"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
